do.то что в инпут, то и на странице

--- a/index.html
+++ b/index.html
@@ -75,22 +75,22 @@
 
 <div class="popup"></div>
 <div class="popup__container">
-    <button class="popup__close-button">
-      <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M32 28.8L19.2 16L32 3.2L28.8 0L16 12.8L3.2 0L0 3.2L12.8 16L0 28.8L3.2 32L16 19.2L28.8 32L32 28.8Z" fill="white"/>
-      </svg>
-    </button>
-    <div class="popup__title">Редактировать профиль</div>
-    <fieldset  class="popup__name-zone">
-      <input type="text" name="profilename" value="Имя" class="popup__text" required></input>
-    </fieldset>
-    <fieldset  class="popup__info-zone">
-      <input type="text" name="info" value="Инфо" class="popup__text" required></input>
-    </fieldset>
-    <button type="submit" class="popup__button">
-      <p class="popup__button-text">Сохранить</p>
-    </button>
-  </div>
+  <button class="popup__close-button">
+    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M32 28.8L19.2 16L32 3.2L28.8 0L16 12.8L3.2 0L0 3.2L12.8 16L0 28.8L3.2 32L16 19.2L28.8 32L32 28.8Z" fill="white"/>
+    </svg>
+  </button>
+  <div class="popup__title">Редактировать профиль</div>
+  <fieldset  class="popup__name-zone">
+    <input type="text" name="profilename" class="popup__text" value="Жак-Ив Кусто" required></input>
+  </fieldset>
+  <fieldset  class="popup__info-zone">
+    <input type="text" name="info" value="Инфо" class="popup__text-info" required></input>
+  </fieldset>
+  <button type="submit" class="popup__button">
+    <p class="popup__button-text">Сохранить</p>
+  </button>
+</div>
 
 <script src="./script/scrirt.js"></script>
 </body>
