fix: исправила вложенность БЭМ. popup-container

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <section class="profile">
         <img class="avatar" alt="Фото" src="./img/Avatar.png">
         <div class="profile-info">
-          <p class="profile-info__text">Жак-Ив Кусто</p>
+          <h1 class="profile-info__text">Жак-Ив Кусто</h1>
           <p class="profile-info__edit-button"></p>
-          <p class="profile-info__data">Исследователь океанов</p>
+          <p class="profile-info__data">Исследователь океанов</з>
         </div>
         <button class="add-button"></button>
       </section>
@@ -70,25 +70,25 @@
     </main>
   </div>
   <footer>
-    <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
+    <p class="footer">&copy; 2022 Mesto Russia</p>
   </footer>
 
 <div class="popup"></div>
-<div class="popup__container">
-  <button class="popup__close-button">
+<div class="popup-container">
+  <button class="popup-container__close-button">
     <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path d="M32 28.8L19.2 16L32 3.2L28.8 0L16 12.8L3.2 0L0 3.2L12.8 16L0 28.8L3.2 32L16 19.2L28.8 32L32 28.8Z" fill="white"/>
     </svg>
   </button>
-  <div class="popup__title">Редактировать профиль</div>
-  <fieldset  class="popup__name-zone">
-    <input type="text" name="profilename" class="popup__text" value="Жак-Ив Кусто" required></input>
+  <div class="popup-container__title">Редактировать профиль</div>
+  <fieldset  class="popup-container__name-zone">
+    <input type="text" name="profilename" class="popup-container__text" value="Жак-Ив Кусто" required>
   </fieldset>
-  <fieldset  class="popup__info-zone">
-    <input type="text" name="info" value="Инфо" class="popup__text-info" required></input>
+  <fieldset  class="popup-container__info-zone">
+    <input type="text" name="info" value="Инфо" class="popup-container__text-info" required>
   </fieldset>
-  <button type="submit" class="popup__button">
-    <p class="popup__button-text">Сохранить</p>
+  <button type="submit" class="popup-container__button">
+    <span class="popup-container__button-text">Сохранить</span>
   </button>
 </div>
 
