fix:  опечатка в index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="profile-info">
           <h1 class="profile-info__text">Жак-Ив Кусто</h1>
           <p class="profile-info__edit-button"></p>
-          <p class="profile-info__data">Исследователь океанов</з>
+          <p class="profile-info__data">Исследователь океанов</p>
         </div>
         <button class="add-button"></button>
       </section>
