--- a/index.html
+++ b/index.html
@@ -76,9 +76,7 @@
 <div class="popup"></div>
 <div class="popup-container">
   <button class="popup-container__close-button">
-    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M32 28.8L19.2 16L32 3.2L28.8 0L16 12.8L3.2 0L0 3.2L12.8 16L0 28.8L3.2 32L16 19.2L28.8 32L32 28.8Z" fill="white"/>
-    </svg>
+    <img src="./img/Close Icon.svg">
   </button>
   <div class="popup-container__title">Редактировать профиль</div>
   <fieldset  class="popup-container__name-zone">
