fix: в названии svg был пробел.убрала

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <div class="popup"></div>
 <div class="popup-container">
   <button class="popup-container__close-button">
-    <img src="./img/Close Icon.svg" alt="закрыть">
+    <img src="./img/Close_Icon.svg" alt="закрыть">
   </button>
   <div class="popup-container__title">Редактировать профиль</div>
   <fieldset  class="popup-container__name-zone">
