--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <input type="text" name="profilename" class="popup-container__text" value="Жак-Ив Кусто" required>
   </fieldset>
   <fieldset  class="popup-container__info-zone">
-    <input type="text" name="info" value="Инфо" class="popup-container__text-info" required>
+    <input type="text" name="info" value="Исследователь океанов" class="popup-container__text-info" required>
   </fieldset>
   <button type="submit" class="popup-container__button">
     <span class="popup-container__button-text">Сохранить</span>
@@ -93,3 +93,4 @@
 <script src="./script/scrirt.js"></script>
 </body>
 </html>
+
