--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <p class="profile-info__edit-button"></p>
           <p class="profile-info__data">Исследователь океанов</p>
         </div>
-        <button class="add-button"></button>
+        <button class="add-button" type="button"></button>
       </section>
 
       <section class="elements">
@@ -75,7 +75,7 @@
 
 <div class="popup"></div>
 <div class="popup-container">
-  <button class="popup-container__close-button">
+  <button class="popup-container__close-button" type="button">
     <img src="./img/Close_Icon.svg" alt="закрыть">
   </button>
   <div class="popup-container__title">Редактировать профиль</div>
