--- a/index.html
+++ b/index.html
@@ -27,50 +27,50 @@
         <div class="element">
           <img class="element__img" alt="Карачаевск" src="./img/1Karachaevsk.png">
           <div class="element__footer">
-            <p class="element__text">Карачаевск</p>
-            <div class="element__heart"></div>
+            <h2 class="element__text">Карачаевск</h2>
+            <button class="element__heart" type="submit"></button>
           </div>
         </div>
         <div class="element">
           <img class="element__img" alt="Эльбрус" src="./img/2Elbrus.png">
           <div class="element__footer">
-            <p class="element__text">Эльбрус</p>
-            <div class="element__heart"></div>
+            <h2 class="element__text">Эльбрус</h2>
+            <button class="element__heart" type="submit"></button>
           </div>
         </div>
         <div class="element">
           <img class="element__img" alt="Домбай" src="./img/3Dombay.png">
           <div class="element__footer">
-            <p class="element__text">Домбай</p>
-            <div class="element__heart"></div>
+            <h2 class="element__text">Домбай</h2>
+            <button class="element__heart" type="submit"></button>
           </div>
         </div>
         <div class="element">
           <img class="element__img" alt="Фото Эльбрус" src="./img/4Elbrus.png">
           <div class="element__footer">
-            <p class="element__text">Эльбрус</p>
-            <div class="element__heart"></div>
+            <h2 class="element__text">Эльбрус</h2>
+            <button class="element__heart" type="submit"></button>
           </div>
         </div>
         <div class="element">
           <img class="element__img" alt="Фото Домбай" src="./img/5Dombay.png">
           <div class="element__footer">
-            <p class="element__text">Домбай</p>
-            <div class="element__heart"></div>
+            <h2 class="element__text">Домбай</h2>
+            <button class="element__heart" type="submit"></button>
           </div>
         </div>
         <div class="element">
           <img class="element__img" alt="Карачаево-Черкесия" src="./img/6Karachaevo-Ch.png">
           <div class="element__footer">
-            <p class="element__text">Карачаево-Черкесия</p>
-            <div class="element__heart"></div>
+            <h2 class="element__text">Карачаево-Черкесия</h2>
+            <button class="element__heart" type="submit"></button>
           </div>
         </div>
       </section>
     </main>
   </div>
-  <footer>
-    <p class="footer">&copy; 2022 Mesto Russia</p>
+  <footer class="footer">
+    <p class="footer__info">&copy; 2022 Mesto Russia</p>
   </footer>
 
 <div class="popup"></div>
