bash fix:profile info

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <section class="profile">
         <img class="avatar" alt="Фото" src="./img/Avatar.png">
         <div class="profile-info">
-          <h1 class="profile-info__text">Жак-Ив Кусто</h1>
-          <button class="profile-info__edit-button" type="submit"></button>
-          <p class="profile-info__data">Исследователь океанов</p>
+          <h1 class="profile__text">Жак-Ив Кусто</h1>
+          <button class="profile__edit-button" type="submit"></button>
+          <p class="profile__data">Исследователь океанов</p>
         </div>
         <button class="add-button" type="button"></button>
       </section>
