--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <main class="main">
       <section class="profile">
-        <img class="avatar" alt="Фото" src="./img/Avatar.png">
+        <img class="profile__avatar" alt="Фото" src="./img/Avatar.png">
         <div class="profile-info">
           <h1 class="profile__text">Жак-Ив Кусто</h1>
           <button class="profile__edit-button" type="submit"></button>
