--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <div class="profile-info">
           <h1 class="profile__text">Жак-Ив Кусто</h1>
           <button class="profile__edit-button" type="submit"></button>
-          <p class="profile__data">Исследователь океанов</p>
+          <p class="profile__data"> Исследователь океана </p>
         </div>
-        <button class="add-button" type="button"></button>
+        <button class="profile__add-button" type="button"></button>
       </section>
 
       <section class="elements">
@@ -85,9 +85,7 @@
     <fieldset  class="popup-container__info-zone">
       <input type="text" name="info" value="Исследователь океанов" class="popup-container__text-info" required>
     </fieldset>
-    <button type="submit" class="popup-container__button">
-      <span class="popup-container__button-text">Сохранить</span>
-    </button>
+    <button type="submit" class="popup-container__button">Сохранить</button>
   </div>
 </div>
 
