--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <div class="popup">
   <div class="popup-container">
     <button class="popup-container__close-button" type="button">
-      <img src="./img/Close_Icon.svg" alt="закрыть">
+      <img src="./img/Close_Icon.svg" alt="закрыть" class="popup-container__close-button-icon">
     </button>
     <h3 class="popup-container__title">Редактировать профиль</h3>
     <fieldset  class="popup-container__name-zone">
