fix.js openBtn fix

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <section class="profile">
         <img class="profile__avatar" alt="Фото" src="./img/Avatar.png">
         <div class="profile-info">
-          <h1 class="profile__text">Жак-Ив Кусто</h1>
+          <h1 class="profile__text">Жак Кустодиев</h1>
           <button class="profile__edit-button" type="submit"></button>
-          <p class="profile__data"> Исследователь океана </p>
+          <p class="profile__data"> Исследователь космоса  </p>
         </div>
         <button class="profile__add-button" type="button"></button>
       </section>
@@ -89,7 +89,7 @@
   </div>
 </div>
 
-<script src="./script/scrirt.js"></script>
+<script src="./script/scrirts.js"></script>
 </body>
 </html>
 
