--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <section class="profile">
         <img class="profile__avatar" alt="Фото" src="./img/Avatar.png">
         <div class="profile-info">
-          <h1 class="profile__text">Жак Ив Кусто</h1>
+          <h1 class="profile__text">Жак-Ив Кусто</h1>
           <button class="profile__edit-button" type="submit"></button>
           <p class="profile__data"> Исследователь космоса  </p>
         </div>
