--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="profile-info">
           <h1 class="profile__text">Жак-Ив Кусто</h1>
           <button class="profile__edit-button" type="submit"></button>
-          <p class="profile__data"> Исследователь космоса  </p>
+          <p class="profile__data"> Исследователь океана</p>
         </div>
         <button class="profile__add-button" type="button"></button>
       </section>
