--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,9 +16,9 @@
     <main class="main">
       <section class="profile">
         <img class="profile__avatar" alt="Фото" src="./img/Avatar.png">
-        <div class="profile-info">
+        <div class="profile__info">
           <h1 class="profile__text">Жак-Ив Кусто</h1>
-          <button class="profile__edit-button" type="submit"></button>
+          <button class="profile__edit-button" type="button"></button>
           <p class="profile__data"> Исследователь космоса</p>
         </div>
         <button class="profile__add-button" type="button"></button>
@@ -28,7 +29,7 @@
           <img class="element__img" alt="Карачаевск" src="./img/1Karachaevsk.png">
           <div class="element__footer">
             <h2 class="element__text">Карачаевск</h2>
-            <button class="element__heart" type="submit"></button>
+            <button class="element__heart" type="button"></button>
           </div>
         </div>
         <div class="element">
@@ -73,23 +74,25 @@
     <p class="footer__info">&copy; 2022 Mesto Russia</p>
   </footer>
 
-<div class="popup">
-  <div class="popup-container">
-    <button class="popup-container__close-button" type="button">
-      <img src="./img/Close_Icon.svg" alt="закрыть" class="popup-container__close-button-icon">
-    </button>
-    <h3 class="popup-container__title">Редактировать профиль</h3>
-    <fieldset  class="popup-container__name-zone">
-      <input type="text" name="profilename" class="popup-container__text" value="Жак-Ив Кусто" required>
-    </fieldset>
-    <fieldset  class="popup-container__info-zone">
-      <input type="text" name="info" value="Исследователь океанов" class="popup-container__text-info" required>
-    </fieldset>
-    <button type="submit" class="popup-container__button">Сохранить</button>
+  <div class="popup">
+    <form class="popup__container">
+      <button class="popup__close-button" type="button">
+        <img src="./img/Close_Icon.svg" alt="закрыть" class="popup__close-button-icon">
+      </button>
+      <h3 class="popup__title">Редактировать профиль</h3>
+      <fieldset class="popup__info-zone">
+        <input type="text" name="profilename" class="popup__text" value="Жак-Ив Кусто" placeholder="введите имя"
+          required>
+      </fieldset>
+      <fieldset class="popup__info-zone">
+        <input type="text" name="info" value="Исследователь океанов" class="popup__text" placeholder="ваша деятельность"
+          required id="job">
+      </fieldset>
+      <button type="submit" class="popup__button">Сохранить</button>
+    </form>
   </div>
-</div>
 
-<script src="./script/scrirts.js"></script>
+  <script src="./scripts/scrirts.js"></script>
 </body>
-</html>
 
+</html>
