--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <input type="text" name="info" value="Исследователь океанов" class="popup__text" placeholder="ваша деятельность"
           required id="job">
       </fieldset>
-      <button type="submit" class="popup__button">Сохранить</button>
+      <input type="submit" class="popup__button" value="Сохранить">
     </form>
   </div>
 
