--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="profile__info">
           <h1 class="profile__text">Жак-Ив Кусто</h1>
           <button class="profile__edit-button" type="button"></button>
-          <p class="profile__data"> Исследователь космоса</p>
+          <p class="profile__data"> Исследователь океана</p>
         </div>
         <button class="profile__add-button" type="button"></button>
       </section>
@@ -85,14 +85,14 @@
           required>
       </fieldset>
       <fieldset class="popup__info-zone">
-        <input type="text" name="info" value="Исследователь океанов" class="popup__text" placeholder="ваша деятельность"
+        <input type="text" name="info" value="Исследователь космоса" class="popup__text" placeholder="ваша деятельность"
           required id="job">
       </fieldset>
       <input type="submit" class="popup__button" value="Сохранить">
     </form>
   </div>
 
-  <script src="./scripts/scrirts.js"></script>
+  <script src="./scripts/scrirt.js"></script>
 </body>
 
 </html>
