--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </form>
   </div>
 
-  <script src="./scripts/scrirt.js"></script>
+  <script src="./scripts/script.js"></script>
 </body>
 
 </html>
