fix js popupOpenBtnFunction

--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
       </button>
       <h3 class="popup__title">Редактировать профиль</h3>
       <fieldset class="popup__info-zone">
-        <input type="text" name="profilename" class="popup__text" value="Жак-Ив Кусто" placeholder="введите имя"
-          required>
+        <input type="text" name="profilename" class="popup__text" value="Проверка смены имени" placeholder="введите имя"
+          required id="popupName">
       </fieldset>
       <fieldset class="popup__info-zone">
-        <input type="text" name="info" value="Исследователь космоса" class="popup__text" placeholder="ваша деятельность"
+        <input type="text" name="info" value="Проверка смены работы" class="popup__text" placeholder="ваша деятельность"
           required id="job">
       </fieldset>
       <input type="submit" class="popup__button" value="Сохранить">
