--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </footer>
 
   <div class="popup">
-    <form class="popup__container">
+    <form class="popup__container" name="popupContainer" id="#form">
       <button class="popup__close-button" type="button">
         <img src="./img/Close_Icon.svg" alt="закрыть" class="popup__close-button-icon">
       </button>
@@ -88,7 +88,7 @@
         <input type="text" name="info" value="Проверка смены работы" class="popup__text" placeholder="ваша деятельность"
           required id="job">
       </fieldset>
-      <input type="submit" class="popup__button" value="Сохранить">
+      <button type="submit" class="popup__button" value="Сохранить" name="submitButton">Сохранить</button>
     </form>
   </div>
 
