--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
           <button class="profile__edit-button" type="button"></button>
           <p class="profile__data"> Исследователь океана</p>
         </div>
-        <button class="profile__add-button" type="button"></button>
+        <button class="profile__add-button" type="button" id="addButton"></button>
       </section>
 
       <section class="elements">
         <div class="element">
+          <!-- <button class="element__trash" type="button"></button> -->
           <img class="element__img" alt="Карачаевск" src="./img/1Karachaevsk.png">
           <div class="element__footer">
             <h2 class="element__text">Карачаевск</h2>
@@ -67,6 +68,7 @@
             <button class="element__heart" type="submit"></button>
           </div>
         </div>
+
       </section>
     </main>
   </div>
@@ -74,6 +76,7 @@
     <p class="footer__info">&copy; 2022 Mesto Russia</p>
   </footer>
 
+  <!-- попап редактирования информации о пользователе -->
   <div class="popup">
     <form class="popup__container" name="popupContainer" id="#form">
       <button class="popup__close-button" type="button">
@@ -92,6 +95,47 @@
     </form>
   </div>
 
+  <!-- попап редактирования информации о месте -->
+  <div class="popup-location">
+    <form class="popup-location__container" name="popupLocationContainer" id="#locationForm">
+      <button class="popup-location__close-button" type="button">
+        <img src="./img/Close_Icon.svg" alt="закрыть" class="popup-location__close-button-icon" id="ClosePopupLocation">
+      </button>
+      <h3 class="popup-location__title">Новое место</h3>
+      <fieldset class="popup-location__info-zone">
+        <input type="text" name="profilename" class="popup-location__text" placeholder="Название"
+          required id="LocationName">
+      </fieldset>
+      <fieldset class="popup-location__info-zone">
+        <input type="text" name="info" class="popup-location__text" placeholder="Ссылка на картинку"
+          required id="locationLink">
+      </fieldset>
+      <button type="submit" class="popup-location__button" value="Сохранить" name="locationSubmitButton">Создать</button>
+    </form>
+  </div>
+
+  <!-- попап карточка -->
+  <div class="popup-image">
+    <form class="popup-location__container" name="popupLocationContainer">
+      <button class="popup-location__close-button" type="button">
+        <img src="./img/Close_Icon.svg" alt="закрыть" class="popup-location__close-button-icon" id="ClosePopupLocation">
+      </button>
+     </form>
+  </div>
+
+  <template id="element">
+    <div class="element">
+          <button class="element__trash" type="button"></button>
+          <img class="element__img" alt="Карачаевск" src="./img/1Karachaevsk.png">
+          <div class="element__footer">
+            <h2 class="element__text">Карачаевск</h2>
+            <button class="element__heart" type="button"></button>
+          </div>
+        </div>
+  </template>
+
+
+  <script src="./scripts/cards.js"></script>
   <script src="./scripts/script.js"></script>
 </body>
 
