--- a/index.html
+++ b/index.html
@@ -30,42 +30,54 @@
           <img class="element__img" alt="Карачаевск" src="./img/1Karachaevsk.png">
           <div class="element__footer">
             <h2 class="element__text">Карачаевск</h2>
-            <button class="element__heart" type="button"></button>
+            <button class="element__heart" type="button">
+              <img id="heartLike" src="./img/heart.svg" class="element__heart-icon">
+            </button>
           </div>
         </div>
         <div class="element">
           <img class="element__img" alt="Эльбрус" src="./img/2Elbrus.png">
           <div class="element__footer">
             <h2 class="element__text"> Гора Эльбрус</h2>
-            <button class="element__heart" type="submit"></button>
+            <button class="element__heart" type="button">
+              <img id="heartLike" src="./img/heart.svg" class="element__heart-icon">
+            </button>
           </div>
         </div>
         <div class="element">
           <img class="element__img" alt="Домбай" src="./img/3Dombay.png">
           <div class="element__footer">
             <h2 class="element__text">Домбай</h2>
-            <button class="element__heart" type="submit"></button>
+            <button class="element__heart" type="button">
+              <img id="heartLike" src="./img/heart.svg" class="element__heart-icon">
+            </button>
           </div>
         </div>
         <div class="element">
           <img class="element__img" alt="Фото Эльбрус" src="./img/4Elbrus.png">
           <div class="element__footer">
             <h2 class="element__text"> Гора Эльбрус</h2>
-            <button class="element__heart" type="submit"></button>
+            <button class="element__heart" type="button">
+              <img id="heartLike" src="./img/heart.svg" class="element__heart-icon">
+            </button>
           </div>
         </div>
         <div class="element">
           <img class="element__img" alt="Фото Домбай" src="./img/5Dombay.png">
           <div class="element__footer">
             <h2 class="element__text">Домбай</h2>
-            <button class="element__heart" type="submit"></button>
+            <button class="element__heart" type="button">
+              <img id="heartLike" src="./img/heart.svg" class="element__heart-icon">
+            </button>
           </div>
         </div>
         <div class="element">
           <img class="element__img" alt="Карачаево-Черкесия" src="./img/6Karachaevo-Ch.png">
           <div class="element__footer">
             <h2 class="element__text">Карачаево-Черкесия</h2>
-            <button class="element__heart" type="submit"></button>
+            <button class="element__heart" type="button">
+              <img id="heartLike" src="./img/heart.svg" class="element__heart-icon">
+            </button>
           </div>
         </div>
 
@@ -114,14 +126,16 @@
     </form>
   </div>
 
-  <!-- попап карточка -->
+  <!-- попап карточка
   <div class="popup-image">
-    <form class="popup-location__container" name="popupLocationContainer">
-      <button class="popup-location__close-button" type="button">
-        <img src="./img/Close_Icon.svg" alt="закрыть" class="popup-location__close-button-icon" id="ClosePopupLocation">
+    <div class="popup-image__container" name="popupImageContainer">
+      <button class="popup-image__close-button" type="button">
+        <img src="./img/Close_Icon.svg" alt="закрыть" class="popup-limage__close-button-icon" id="ClosePopupImage">
       </button>
-     </form>
+     </div>
   </div>
+ -->
+
 
   <template id="element">
     <div class="element">
