--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
       </section>
 
       <section class="elements">
-        <div class="element">
-          <!-- <button class="element__trash" type="button"></button> -->
+        <!--div class="element">
+          <!-- <button class="element__trash" type="button"></button>
           <img class="element__img" alt="Карачаевск" src="./img/1Karachaevsk.png">
           <div class="element__footer">
             <h2 class="element__text">Карачаевск</h2>
-            <button class="element__heart" type="button">
-              <img id="heartLike" src="./img/heart.svg" class="element__heart-icon">
+            <button class="element__heart" type="button" id="cardLikeButton">
+              <!--<img id="heartLike" src="./img/heart.svg" class="element__heart-icon">
             </button>
           </div>
         </div>
@@ -39,8 +39,8 @@
           <img class="element__img" alt="Эльбрус" src="./img/2Elbrus.png">
           <div class="element__footer">
             <h2 class="element__text"> Гора Эльбрус</h2>
-            <button class="element__heart" type="button">
-              <img id="heartLike" src="./img/heart.svg" class="element__heart-icon">
+            <button class="element__heart" type="button" id="cardLikeButton">
+              <!--<img id="heartLike" src="./img/heart.svg" class="element__heart-icon">
             </button>
           </div>
         </div>
@@ -48,8 +48,8 @@
           <img class="element__img" alt="Домбай" src="./img/3Dombay.png">
           <div class="element__footer">
             <h2 class="element__text">Домбай</h2>
-            <button class="element__heart" type="button">
-              <img id="heartLike" src="./img/heart.svg" class="element__heart-icon">
+            <button class="element__heart" type="button" id="cardLikeButton">
+              <!--<img id="heartLike" src="./img/heart.svg" class="element__heart-icon">
             </button>
           </div>
         </div>
@@ -57,8 +57,8 @@
           <img class="element__img" alt="Фото Эльбрус" src="./img/4Elbrus.png">
           <div class="element__footer">
             <h2 class="element__text"> Гора Эльбрус</h2>
-            <button class="element__heart" type="button">
-              <img id="heartLike" src="./img/heart.svg" class="element__heart-icon">
+            <button class="element__heart" type="button" id="cardLikeButton">
+              <!--<img id="heartLike" src="./img/heart.svg" class="element__heart-icon">-
             </button>
           </div>
         </div>
@@ -66,22 +66,22 @@
           <img class="element__img" alt="Фото Домбай" src="./img/5Dombay.png">
           <div class="element__footer">
             <h2 class="element__text">Домбай</h2>
-            <button class="element__heart" type="button">
-              <img id="heartLike" src="./img/heart.svg" class="element__heart-icon">
+            <button class="element__heart" type="button" id="cardLikeButton">
+             <!--<img id="heartLike" src="./img/heart.svg" class="element__heart-icon">
             </button>
           </div>
         </div>
         <div class="element">
           <img class="element__img" alt="Карачаево-Черкесия" src="./img/6Karachaevo-Ch.png">
           <div class="element__footer">
-            <h2 class="element__text">Карачаево-Черкесия</h2>
-            <button class="element__heart" type="button">
-              <img id="heartLike" src="./img/heart.svg" class="element__heart-icon">
+            <h2 class="element__text">Карачаево-Черкесия</h<button class="element__heart" type="button" id="cardLikeButton">2>
+              <button class="element__heart" type="button" id="cardLikeButton">
+             <!--<img id="heartLike" src="./img/heart.svg" class="element__heart-icon">
             </button>
           </div>
-        </div>
-
+        </div> -->
       </section>
+
     </main>
   </div>
   <footer class="footer">
@@ -115,14 +115,15 @@
       </button>
       <h3 class="popup-location__title">Новое место</h3>
       <fieldset class="popup-location__info-zone">
-        <input type="text" name="profilename" class="popup-location__text" placeholder="Название"
-          required id="LocationName">
+        <input type="text" name="profilename" class="popup-location__text" placeholder="Название" required
+          id="LocationName">
       </fieldset>
       <fieldset class="popup-location__info-zone">
-        <input type="text" name="info" class="popup-location__text" placeholder="Ссылка на картинку"
-          required id="locationLink">
+        <input type="text" name="info" class="popup-location__text" placeholder="Ссылка на картинку" required
+          id="locationLink">
       </fieldset>
-      <button type="submit" class="popup-location__button" value="Сохранить" name="locationSubmitButton">Создать</button>
+      <button type="submit" class="popup-location__button" value="Сохранить"
+        name="locationSubmitButton">Создать</button>
     </form>
   </div>
 
@@ -139,13 +140,13 @@
 
   <template id="element">
     <div class="element">
-          <button class="element__trash" type="button"></button>
-          <img class="element__img" alt="Карачаевск" src="./img/1Karachaevsk.png">
-          <div class="element__footer">
-            <h2 class="element__text">Карачаевск</h2>
-            <button class="element__heart" type="button"></button>
-          </div>
-        </div>
+      <button class="element__trash" type="button"></button>
+      <img class="element__img" alt="Карачаевск" src="./img/1Karachaevsk.png">
+      <div class="element__footer">
+        <h2 class="element__text">Карачаевск</h2>
+        <button class="element__heart" type="button"></button>
+      </div>
+    </div>
   </template>
 
 
