добавление карточек сделано

--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
       </button>
       <h3 class="popup-location__title">Новое место</h3>
       <fieldset class="popup-location__info-zone">
-        <input type="text" name="profilename" class="popup-location__text" placeholder="Название" required
+        <input type="text" name="locationname" class="popup-location__text" placeholder="Название" required
           id="LocationName">
       </fieldset>
       <fieldset class="popup-location__info-zone">
-        <input type="text" name="info" class="popup-location__text" placeholder="Ссылка на картинку" required
+        <input type="text" name="link" class="popup-location__text" placeholder="Ссылка на картинку" required
           id="locationLink">
       </fieldset>
       <button type="submit" class="popup-location__button" value="Сохранить"
@@ -141,7 +141,7 @@
   <template id="element">
     <div class="element">
       <button class="element__trash" type="button"></button>
-      <img class="element__img" alt="Карачаевск" src="./img/1Karachaevsk.png">
+      <img class="element__img" alt="Фотография" src="./img/1Karachaevsk.png">
       <div class="element__footer">
         <h2 class="element__text">Карачаевск</h2>
         <button class="element__heart" type="button"></button>
