добавить. лайк на карточки

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
         <div class="element">
           <img class="element__img" alt="Карачаево-Черкесия" src="./img/6Karachaevo-Ch.png">
           <div class="element__footer">
-            <h2 class="element__text">Карачаево-Черкесия</h<button class="element__heart" type="button" id="cardLikeButton">2>
-              <button class="element__heart" type="button" id="cardLikeButton">
-             <!--<img id="heartLike" src="./img/heart.svg" class="element__heart-icon">
+            <h2 class="element__text">Карачаево-Черкесия</h2>
+            <button class="element__heart" type="button" id="cardLikeButton">
+           <!--<img id="heartLike" src="./img/heart.svg" class="element__heart-icon">
             </button>
           </div>
         </div> -->
@@ -147,7 +147,7 @@
       <img class="element__img" alt="Фотография" src="./img/1Karachaevsk.png">
       <div class="element__footer">
         <h2 class="element__text">Карачаевск</h2>
-        <button class="element__heart" type="button"></button>
+        <button class="element__heart" type="button" id="heartBtn"><img class="element__heart-icon" src="./img/heart.svg" alt="Heart"></button>
       </div>
     </div>
   </template>
