переписать без теплейт. генерация карточек

--- a/index.html
+++ b/index.html
@@ -139,15 +139,13 @@
     </div>
 
 
-
-
-  <template id="element">
+  <template id="imageCard">
     <div class="element">
-      <button class="element__trash" type="button"></button>
       <img class="element__img" alt="Фотография" src="./img/1Karachaevsk.png">
+      <button class="element__trash" type="button"></button>
       <div class="element__footer">
         <h2 class="element__text">Карачаевск</h2>
-        <button class="element__heart" type="button" id="heartBtn"><img class="element__heart-icon" src="./img/heart.svg" alt="Heart"></button>
+        <button class="element__heart" type="button" id="heartBtn"></button>
       </div>
     </div>
   </template>
