сделать плавное открытие попапа

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <button class="popup-image__close-button" type="button">
         <img src="./img/Close_Icon.svg" alt="закрыть" class="popup-limage__close-button-icon" id="ClosePopupImage">
       </button>
-      <div class="popup-image__text">Карачаевск</div>
+      <div class="popup-image__text" id="imageName">Карачаевск</div>
     </div>
     </div>
 
