--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   <!-- попап карточка-->
   <div class="popup-image">
     <div class="popup-image__container" name="popupImageContainer">
-      <img class="popup-image__picture" alt="Увеличенная фотография" src="./img/1Image.png">
+      <img class="popup-image__picture" alt="Увеличенная фотография" src="./img/Avatar.png">
       <button class="popup-image__close-button" type="button">
         <img src="./img/Close_Icon.svg" alt="закрыть" class="popup-image__close-button-icon" id="ClosePopupImage">
       </button>
