исправить ошибку в консоли

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main class="main">
       <section class="profile">
-        <img class="profile__avatar" alt="Фото" src="./img/Avatar.png">
+        <img class="profile__avatar" alt="Фото" src="./img/Avatar.jpg">
         <div class="profile__info">
           <h1 class="profile__text">Жак-Ив Кусто</h1>
           <button class="profile__edit-button" type="button"></button>
@@ -130,7 +130,7 @@
   <!-- попап карточка-->
   <div class="popup-image">
     <div class="popup-image__container" name="popupImageContainer">
-      <img class="popup-image__picture" alt="Увеличенная фотография" src="./img/Avatar.png">
+      <img class="popup-image__picture" alt="Увеличенная фотография" src="./img/1s.jpg">
       <button class="popup-image__close-button" type="button">
         <img src="./img/Close_Icon.svg" alt="закрыть" class="popup-image__close-button-icon" id="ClosePopupImage">
       </button>
