--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     </header>
     <main class="main">
       <section class="profile">
-        <img class="profile__avatar" alt="Фото" src="./img/Avatar.png">
+        <img class="profile__avatar" alt="Фото" src="./img/Avatar.jpg">
         <div class="profile__info">
           <h1 class="profile__text">Жак-Ив Кусто</h1>
-          <button class="profile__edit-button" type="button" id="editButton"></button>
+          <button class="profile__edit-button popup_open-button" type="button""></button>
           <p class="profile__data"> Исследователь океана</p>
         </div>
-        <button class="profile__add-button" type="button" id="editButton"></button>
+        <button class="profile__add-button popup_open-button" type="button"></button>
       </section>
 
       <section class="elements">
@@ -36,8 +36,8 @@
   <!-- попап редактирования информации о пользователе -->
   <div class="popup popup_edit-profile">
     <form class="popup_edit-profile__container" name="popupContainer" id="#form">
-      <button class="popup_edit-profile__close-button" type="button" id="closeButton">
-        <img src="./img/Close_Icon.svg" alt="закрыть" class="popup_edit-profile__close-button-icon" id="closeButton">
+      <button class="popup_edit-profile__close-button popup_close-button" type="button">
+        <img src="./img/Close_Icon.svg" alt="закрыть" class="popup_edit-profile__close-button-icon popup_close-button">
       </button>
       <h3 class="popup_edit-profile__title">Редактировать профиль</h3>
       <fieldset class="popup_edit-profile__info-zone">
@@ -48,14 +48,14 @@
         <input type="text" name="info" value="Проверка смены работы" class="popup_edit-profile__text" placeholder="ваша деятельность"
           required id="job">
       </fieldset>
-      <button type="submit" class="popup_edit-profile__button" value="Сохранить" name="submitButton" id="editButton">Сохранить</button>
+      <button type="submit" class="popup_edit-profile__button popup_close-button" value="Сохранить" name="submitButton">Сохранить</button>
     </form>
   </div>
 
   <!-- попап редактирования информации о месте -->
   <div class="popup popup-location">
     <form class="popup-location__container" name="popupLocationContainer" id="#locationForm">
-      <button class="popup-location__close-button" type="button" id="closeButton">
+      <button class="popup-location__close-button popup_close-button" type="button">
         <img src="./img/Close_Icon.svg" alt="закрыть" class="popup-location__close-button-icon" id="ClosePopupLocation">
       </button>
       <h3 class="popup-location__title">Новое место</h3>
@@ -67,8 +67,8 @@
         <input type="text" name="link" class="popup-location__text" placeholder="Ссылка на картинку" required
           id="locationLink">
       </fieldset>
-      <button type="submit" class="popup-location__button" value="Сохранить"
-        name="locationSubmitButton" id="editButton">Создать</button>
+      <button type="submit" class="popup-location__button popup_close-button" value="Сохранить"
+        name="locationSubmitButton">Создать</button>
     </form>
   </div>
 
@@ -76,8 +76,8 @@
   <div class="popup popup-image">
     <div class="popup-image__container" name="popupImageContainer">
       <img class="popup-image__picture" alt="Увеличенная фотография" src="./img/1s.jpg">
-      <button class="popup-image__close-button" type="button" id="closeButton">
-        <img src="./img/Close_Icon.svg" alt="закрыть" class="popup-image__close-button-icon" id="ClosePopupImage">
+      <button class="popup-image__close-button popup_close-button" type="button">
+        <img src="./img/Close_Icon.svg" alt="закрыть" class="popup-image__close-button-icon popup_close-button" id="ClosePopupImage">
       </button>
       <div class="popup-image__text" id="imageName">Карачаевск</div>
     </div>
@@ -86,7 +86,7 @@
 
   <template id="imageCard">
     <div class="element">
-      <img class="element__img" alt="Фотография" src="./img/1Karachaevsk.png">
+      <img class="element__img" alt="Фотография" src="./img/1s.jpg">
       <button class="element__trash" type="button"></button>
       <div class="element__footer">
         <h2 class="element__text">Карачаевск</h2>
