--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <img class="profile__avatar" alt="Фото" src="./img/Avatar.jpg">
         <div class="profile__info">
           <h1 class="profile__text">Жак-Ив Кусто</h1>
-          <button class="profile__edit-button button__open" type="button" ></button>
+          <button class="profile__edit-button open-button" type="button" ></button>
           <p class="profile__data"> Исследователь океана</p>
         </div>
-        <button class="profile__add-button button__open" type="button" id="addButton"></button>
+        <button class="profile__add-button open-button" type="button" id="addButton"></button>
       </section>
 
       <section class="elements">
@@ -48,7 +48,7 @@
         <input type="text" name="info" value="Проверка смены работы" class="popup_edit-profile__text" placeholder="ваша деятельность"
           required id="job">
       </fieldset>
-      <button type="submit" class="popup_edit-profile__button popup_close-button" value="Сохранить" name="submitButton">Сохранить</button>
+      <button type="submit" class="popup_edit-profile__button" value="Сохранить" name="submitButton">Сохранить</button>
     </form>
   </div>
 
@@ -56,7 +56,7 @@
   <div class="popup popup-location">
     <form class="popup-location__container" name="popupLocationContainer" id="#locationForm">
       <button class="popup-location__close-button popup__close-button" type="button">
-        <img src="./img/Close_Icon.svg" alt="закрыть" class="popup__close-button popup-location__close-button-icon" id="ClosePopupLocation">
+        <img src="./img/Close_Icon.svg" alt="закрыть" class="popup-location__close-button-icon popup__close-button">
       </button>
       <h3 class="popup-location__title">Новое место</h3>
       <fieldset class="popup-location__info-zone">
@@ -73,11 +73,12 @@
   </div>
 
   <!-- попап карточка-->
-  <div class="popup_image">
+  <div class="popup popup_image">
     <div class="popup_image__container" name="popupImageContainer">
-      <img class="popup-image__picture" alt="Увеличенная фотография" src="./img/1s.jpg">
-      <button class="popup_image__close-button" type="button">
-        <img src="./img/Close_Icon.svg" alt="закрыть" class="popup_image__close-button popup_image__close-button-icon" id="ClosePopupImage">
+      <img class="popup_image__picture" alt="Увеличенная фотография" src="./img/1s.jpg">
+      <button class="popup_image__close-button popup__close-button" type="button">
+        <img src="./img/Close_Icon.svg" alt="закрыть" class="popup_image__close-button popup_image__close-button-icon
+         popup__close-button" id="ClosePopupImage">
       </button>
       <div class="popup_image__text" id="imageName">Карачаевск</div>
     </div>
