--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </section>
 
       <section class="elements">
-        <div class="element">
+        <!-- <div class="element">
           <img class="element__img" alt="Карачаевск" src="./img/1Karachaevsk.png">
           <div class="element__footer">
             <h2 class="element__text">Карачаевск</h2>
@@ -66,7 +66,7 @@
             <h2 class="element__text">Карачаево-Черкесия</h2>
             <button class="element__heart" type="submit"></button>
           </div>
-        </div>
+        </div>-->
       </section>
     </main>
   </div>
